adding blog post and added their facebook link

--- a/index.html
+++ b/index.html
@@ -116,22 +116,22 @@
             <div class="carousel-inner">
               <div class="carousel-item active" data-aos="fade-right">
                 <div class="testimonial-box">
-                  <!-- <p class="testimonial-text">"Briset Investments has been a game-changer for our business. Their tax consulting services are top-notch!"</p>
-                  <h5 class="testimonial-author">CRYSTAL ISLAND (PVT) LTD</h5> -->
+                  <p class="testimonial-text">"I had an exceptional experience with Briset Investments. Their professionalism and expertise exceeded my expectations, providing tailored advice that significantly benefited my financial planning. Highly recommend"</p>
+                  <h5 class="testimonial-author">METALLION VALLEY (PVT) LTD</h5>
                 </div>
               </div>
               <div class="carousel-item" data-aos="fade-up">
                 <div class="testimonial-box">
-                  <!-- <p class="testimonial-text">"The team at Briset Investments is incredibly knowledgeable and professional. Highly recommend their services."</p>
-                  <h5 class="testimonial-author">METALLION VALLEY (PVT) LTD</h5> -->
+                  <p class="testimonial-text">"I had an exceptional experience with Briset Investments. Their professionalism and expertise exceeded my expectations, providing tailored advice that significantly benefited my financial planning. Highly recommend"</p>
+                  <h5 class="testimonial-author">METALLION VALLEY (PVT) LTD</h5>
                 </div>
               </div>
-              <div class="carousel-item" data-aos="fade-left">
+              <!-- <div class="carousel-item" data-aos="fade-left">
                 <div class="testimonial-box">
-                  <!-- <p class="testimonial-text">"Their accounting and bookkeeping services have helped us streamline our financial processes. We couldn't be happier!"</p>
-                  <h5 class="testimonial-author">CAEMAN INVESTMENTS (PVT) LTD</h5> -->
+                  <p class="testimonial-text">"Their accounting and bookkeeping services have helped us streamline our financial processes. We couldn't be happier!"</p>
+                  <h5 class="testimonial-author">CAEMAN INVESTMENTS (PVT) LTD</h5>
                 </div>
-              </div>
+              </div> -->
             </div>
             <a class="carousel-control-prev" href="#testimonialCarousel" role="button" data-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -151,26 +151,27 @@
             <h2>Latest News & Blog Posts</h2>
             <p>Stay updated with our latest news and insightful blog posts.</p>
           </div>
+          <h2 class="green">Steps to submitting the new PAYE return</h2>
           <div class="row" id="blog-posts">
             <div class="col-md-4" data-aos="fade-right">
               <div class="blog-box">
-                <h3>Title of Blog Post 1</h3>
-                <p>Excerpt of the blog post content goes here. This is a summary of the post...</p>
+                <h3>Step1 </h3>
+                <p>Registering employees under employee management</p>
                 <a href="blog-post-1.html" class="btn btn-primary">Read More</a>
               </div>
             </div>
             <div class="col-md-4" data-aos="fade-up">
               <div class="blog-box">
-                <h3>Title of Blog Post 2</h3>
-                <p>Excerpt of the blog post content goes here. This is a summary of the post...</p>
-                <a href="blog-post-2.html" class="btn btn-primary">Read More</a>
+                <h3>Step 2 </h3>
+                <p>Inputting employee earnings</p>
+                <a href="blog-post-1.html#step2" class="btn btn-primary">Read More</a>
               </div>
             </div>
             <div class="col-md-4" data-aos="fade-left">
               <div class="blog-box">
-                <h3>Title of Blog Post 3</h3>
-                <p>Excerpt of the blog post content goes here. This is a summary of the post...</p>
-                <a href="blog-post-3.html" class="btn btn-primary">Read More</a>
+                <h3>Step 3 </h3>
+                <p>Submitting of paye return </p>
+                <a href="blog-post-1.html#step3" class="btn btn-primary">Read More</a>
               </div>
             </div>
           </div>
@@ -268,7 +269,7 @@
         <div class="col-md-4" data-aos="fade-up">
           <h4>Follow Us</h4>
           <div>
-            <a href="https://www.facebook.com" class="text-white mr-3"><i class="bi bi-facebook"></i></a>
+            <a href="https://www.facebook.com/people/Briset-Investments/100076710792015/" class="text-white mr-3"><i class="bi bi-facebook"></i></a>
             <a href="https://www.x.com" class="text-white mr-3"><i class="bi bi-twitter"></i></a>
             <a href="https://www.linkedin.com" class="text-white mr-3"><i class="bi bi-linkedin"></i></a>
             <a href="https://www.instagram.com" class="text-white mr-3"><i class="bi bi-instagram"></i></a>
