--- a/contact.html
+++ b/contact.html
@@ -137,7 +137,7 @@
             <div class="col-md-4" data-aos="fade-up">
               <h4>Follow Us</h4>
               <div>
-                <a href="https://www.facebook.com" class="text-white mr-3"><i class="bi bi-facebook"></i></a>
+                <a href="https://www.facebook.com/people/Briset-Investments/100076710792015/" class="text-white mr-3"><i class="bi bi-facebook"></i></a>
                 <a href="https://www.x.com" class="text-white mr-3"><i class="bi bi-twitter"></i></a>
                 <a href="https://www.linkedin.com" class="text-white mr-3"><i class="bi bi-linkedin"></i></a>
                 <a href="https://www.instagram.com" class="text-white mr-3"><i class="bi bi-instagram"></i></a>
