--- a/contact.html
+++ b/contact.html
@@ -76,30 +76,30 @@
         <div class="container mt-5">
           <h2>Contact Us</h2>
           <div class="contact-form">
-            <form id="contactForm">
+            <form id="contactForm" action="https://formsubmit.co/megacash0818@gmail.com" method="POST">
               <div class="form-row">
                 <div class="form-group col-md-6">
                   <label for="name">Name</label>
-                  <input type="text" class="form-control" id="name" placeholder="Your Name" required>
+                  <input type="text" name ="Name" class="form-control" id="name" placeholder="Your Name" required>
                 </div>
                 <div class="form-group col-md-6">
                   <label for="email">Email</label>
-                  <input type="email" class="form-control" id="email" placeholder="Your Email" required>
+                  <input type="email" name ="email " class="form-control" id="email" placeholder="Your Email" required>
                 </div>
               </div>
               <div class="form-row">
                 <div class="form-group col-md-6">
                   <label for="phone">Phone Number</label>
-                  <input type="tel" class="form-control" id="phone" placeholder="Your Phone Number" required>
+                  <input type="tel" name ="phone " class="form-control" id="phone" placeholder="Your Phone Number" required>
                 </div>
                 <div class="form-group col-md-6">
                   <label for="subject">Subject</label>
-                  <input type="text" class="form-control" id="subject" placeholder="Subject" required>
+                  <input type="text" name ="subject " class="form-control" id="subject" placeholder="Subject" required>
                 </div>
               </div>
               <div class="form-group">
                 <label for="message">Message</label>
-                <textarea class="form-control" id="message" rows="5" placeholder="Your Message" required></textarea>
+                <textarea class="form-control" name ="message" id="message" rows="5" placeholder="Your Message" required></textarea>
               </div>
               <button type="submit" class="btn btn-primary">Send Message</button>
             </form>
