added thank you page

--- a/contact.html
+++ b/contact.html
@@ -76,7 +76,7 @@
         <div class="container mt-5">
           <h2>Contact Us</h2>
           <div class="contact-form">
-            <form id="contactForm" action="https://formsubmit.co/megacash0818@gmail.com" method="POST">
+            <form id="contactForm" action="https://formsubmit.co/18d69851a769661bf305a83b6324a105" method="POST">
               <div class="form-row">
                 <div class="form-group col-md-6">
                   <label for="name">Name</label>
