--- a/contact.html
+++ b/contact.html
@@ -102,6 +102,7 @@
                 <textarea class="form-control" name ="message" id="message" rows="5" placeholder="Your Message" required></textarea>
               </div>
               <button type="submit" class="btn btn-primary">Send Message</button>
+              <input type="hidden" name="_next" value="https://mufarodemo5.wuaze.com/thanks.html">
             </form>
           </div>
         </div>
