--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
               </div>
               <div class="carousel-item" data-aos="fade-up">
                 <div class="testimonial-box">
-                  <p class="testimonial-text">"I had an exceptional experience with Briset Investments. Their professionalism and expertise exceeded my expectations, providing tailored advice that significantly benefited my financial planning. Highly recommend"</p>
-                  <h5 class="testimonial-author">METALLION VALLEY (PVT) LTD</h5>
+                  <p class="testimonial-text">"Briset gives us peace of mind regarding out tax affairs. We have found them professional with and dedicated to what they do. They have always kept us abreast of all developments in tax matters and have always been available for support and advice whenever we needed them."</p>
+                  <h5 class="testimonial-author">Thomas Mukoki, Business Manager/Director at Automation Plus Pvt Ltd</h5>
                 </div>
               </div>
               <!-- <div class="carousel-item" data-aos="fade-left">
@@ -252,7 +252,7 @@
           <h4>Contact Us</h4>
           <p>
             Briset Investments<br>
-            4289 Rockview, Park, Harare, Zimbabwe<br>
+            4289 Rockview Park, Harare, Zimbabwe<br>
             Phone: +263 77 288 5517, +263 77 347 0815<br>
             Email: briset.inv@gmail.com
       </p>
